Content upgrade: expand institutional and utility pages to premium quality

--- a/pages/bilim.html
+++ b/pages/bilim.html
@@ -465,9 +465,33 @@
  <div style="margin-bottom: 3rem;">
  <h3 style="font-size: 1.5rem; font-weight: 700; margin-bottom: 1.5rem; text-align: center;">Obezite Neden En Kritik?</h3>
  <div style="text-align: left; font-size: 1.05rem; line-height: 1.8; opacity: 0.9;">
- <p style="margin-bottom: 1rem;">Obezite, 1 numaralı ölüm nedeni yüksek tansiyonun, diyabetin ve <strong>13 kanser türünün</strong> ortak risk faktörüdür.</p>
- <p style="margin-bottom: 1rem;"><strong>WHO 2022:</strong> Dünya genelinde 890 milyon obez yetişkin. 2021'de obeziteyle ilişkili <strong>3.7 milyon ölüm</strong>.</p>
- <p>Bu yüzden sağlıklı kiloya ulaşmak, yaşam süresini uzatmanın en etkili yoludur.</p>
+ <p style="margin-bottom: 1rem;">Obezite, 1 numaralı ölüm nedeni yüksek tansiyonun, tip 2 diyabetin ve <strong>13 kanser türünün</strong> ortak risk faktörüdür. BMI 30 üzeri olan bireylerde kardiyovasküler hastalık riski 2-3 kat, tip 2 diyabet riski 7 kat artmaktadır.</p>
+ <p style="margin-bottom: 1rem;"><strong>WHO 2024:</strong> Dünya genelinde <strong>1 milyardan fazla</strong> obez birey (yetişkin, ergen ve çocuk). 2021'de obeziteyle doğrudan ilişkili <strong>3.7 milyon ölüm</strong> kaydedildi.</p>
+ <p style="margin-bottom: 1rem;"><strong>Türkiye:</strong> TÜİK 2023 verilerine göre yetişkin obezite oranı <strong>%21.1</strong>; fazla kilolu dahil oran <strong>%34.5</strong>'e ulaşıyor. Bu, yaklaşık <strong>17.9 milyon</strong> obez yetişkin anlamına gelir. OECD ülkeleri arasında obezite artış hızında ilk sıralardayız.</p>
+ <p>Bu yüzden sağlıklı kiloya ulaşmak, yaşam süresini uzatmanın en etkili ve bilimsel olarak kanıtlanmış yoludur.</p>
+ </div>
+ </div>
+
+ <!-- Ek Kilit Çalışmalar -->
+ <div style="margin-bottom: 3rem;">
+ <h3 style="font-size: 1.5rem; font-weight: 700; margin-bottom: 1.5rem; text-align: center;">Destekleyen Kilit Araştırmalar</h3>
+ <div style="display: grid; grid-template-columns: 1fr; gap: 1rem;">
+ <div style="background: rgba(255,255,255,0.08); border-radius: 12px; padding: 1.5rem; border: 1px solid rgba(255,255,255,0.1);">
+ <p style="font-weight: 700; margin-bottom: 0.5rem;">STEP 1 Çalışması (2021)</p>
+ <p style="font-size: 0.95rem; opacity: 0.85;">Semaglutid 2.4 mg ile 68 haftalık tedavide ortalama <strong>%14.9 kilo kaybı</strong> sağlandı (plasebo: %2.4). 1,961 katılımcı. Wilding JPH, et al. NEJM. 2021;384(11):989-1002.</p>
+ </div>
+ <div style="background: rgba(255,255,255,0.08); border-radius: 12px; padding: 1.5rem; border: 1px solid rgba(255,255,255,0.1);">
+ <p style="font-weight: 700; margin-bottom: 0.5rem;">SURMOUNT-1 Çalışması (2022)</p>
+ <p style="font-size: 0.95rem; opacity: 0.85;">Tirzepatid ile 72 haftalık tedavide en yüksek dozda ortalama <strong>%22.5 kilo kaybı</strong>. 2,539 katılımcı. Jastreboff AM, et al. NEJM. 2022;387(3):205-216.</p>
+ </div>
+ <div style="background: rgba(255,255,255,0.08); border-radius: 12px; padding: 1.5rem; border: 1px solid rgba(255,255,255,0.1);">
+ <p style="font-weight: 700; margin-bottom: 0.5rem;">Global Burden of Disease (2019)</p>
+ <p style="font-size: 0.95rem; opacity: 0.85;">Yüksek BMI, dünya genelinde <strong>yılda 5 milyon</strong> erken ölümle ilişkilendirildi. Tüm ölümlerin %8'i yüksek BMI'ye atfedilebilir. GBD 2019 Risk Factors Collaborators. Lancet. 2020;396:1223-1249.</p>
+ </div>
+ <div style="background: rgba(255,255,255,0.08); border-radius: 12px; padding: 1.5rem; border: 1px solid rgba(255,255,255,0.1);">
+ <p style="font-weight: 700; margin-bottom: 0.5rem;">PREDIMED Çalışması (2018)</p>
+ <p style="font-size: 0.95rem; opacity: 0.85;">Akdeniz diyeti ile kardiyovasküler olay riski <strong>%30</strong> azaldı. 7,447 katılımcı, 4.8 yıl takip. Estruch R, et al. NEJM. 2018;378(25):e34.</p>
+ </div>
  </div>
  </div>
 
@@ -551,22 +575,22 @@
  <div class="legend-item">
  <div class="legend-color green"></div>
  <div class="legend-content">
- <h4>Sistematik Derleme & Meta-Analiz</h4>
- <p>Birden fazla çalışmanın sistematik olarak değerlendirilmesi ve istatistiksel birleştirilmesi. En güçlü kanıt düzeyi.</p>
+ <h4>Sistematik Derleme ve Meta-Analiz</h4>
+ <p>Birden fazla çalışmanın önceden belirlenmiş kriterlere göre sistematik olarak taranması, kalite değerlendirmesi ve istatistiksel birleştirilmesi. Cochrane Reviews bu kategorinin altın standardıdır. En güçlü kanıt düzeyi olup, bireysel çalışmaların sınırlamalarını aşar ve genel eğilimleri ortaya koyar.</p>
  </div>
  </div>
  <div class="legend-item">
  <div class="legend-color blue"></div>
  <div class="legend-content">
- <h4>Randomize Kontrollü Çalışmalar</h4>
- <p>Katılımcıların rastgele gruplara atandığı, kontrollü deneysel çalışmalar. Altın standart.</p>
+ <h4>Randomize Kontrollü Çalışmalar (RKC)</h4>
+ <p>Katılımcıların tedavi ve kontrol gruplarına rastgele atandığı deneysel çalışmalar. Nedensellik ilişkisi kurulabilecek en güçlü bireysel çalışma tasarımıdır. Çift kör, plasebo kontrollü RKC'ler altın standart kabul edilir. STEP ve SURMOUNT çalışmaları bu kategoridedir.</p>
  </div>
  </div>
  <div class="legend-item">
  <div class="legend-color purple"></div>
  <div class="legend-content">
  <h4>Kohort Çalışmaları</h4>
- <p>Belirli bir grubu zaman içinde takip eden gözlemsel çalışmalar. Uzun vadeli etkileri gösterir.</p>
+ <p>Belirli bir grubu yıllar veya on yıllar boyunca takip eden gözlemsel çalışmalar. Uzun vadeli etkileri ve risk faktörlerini ortaya koyar. Nurses' Health Study (120.000+ katılımcı, 34 yıl) ve Framingham Heart Study bu kategorinin en bilinen örnekleridir. Korelasyon gösterir, ancak tek başına nedensellik kanıtlamaz.</p>
  </div>
  </div>
  <div class="legend-item">
