--- a/pages/danisma-kurulu.html
+++ b/pages/danisma-kurulu.html
@@ -211,14 +211,16 @@
  <span class="dk-role">Kurul Üyesi</span>
  </div>
  </div>
- <p class="dk-desc">Hormonal düzenlemeler, metabolik sendrom, insülin direnci ve GLP-1 ilaçları konusundaki içerikleri değerlendirir.</p>
+ <p class="dk-desc">Hormonal düzenlemeler, metabolik sendrom, insülin direnci, tip 2 diyabet yönetimi ve GLP-1 reseptör agonistleri (semaglutid, tirzepatid) konusundaki içerikleri değerlendirir. Tiroid hastalıklarının kilo üzerindeki etkileri, polikistik over sendromu (PKOS) ve obezitenin hormonal mekanizmaları konularında bilimsel doğruluk denetimi yapar. İlaç dozajları, kontrendikasyonlar ve ilaç etkileşimleri konusunda uzman görüşü sağlar.</p>
  <div class="dk-areas">
  <h4>İnceleme Alanları</h4>
  <div class="dk-tags">
- <span class="dk-tag">GLP-1 İlaçları</span>
+ <span class="dk-tag">GLP-1 Agonistleri</span>
  <span class="dk-tag">İnsülin Direnci</span>
- <span class="dk-tag">Tiroid</span>
+ <span class="dk-tag">Tiroid Hastalıkları</span>
  <span class="dk-tag">Metabolik Sendrom</span>
+ <span class="dk-tag">Tip 2 Diyabet</span>
+ <span class="dk-tag">PKOS</span>
  </div>
  </div>
  </div>
@@ -232,7 +234,7 @@
  <span class="dk-role">Kurul Üyesi</span>
  </div>
  </div>
- <p class="dk-desc">Cerrahi kilo verme yöntemleri, ameliyat öncesi/sonrası süreçler ve uzun vadeli takip konularını denetler.</p>
+ <p class="dk-desc">Laparoskopik ve robotik bariatrik cerrahi yöntemleri (sleeve gastrektomi, Roux-en-Y gastrik bypass, mini gastrik bypass), ameliyat öncesi multidisipliner değerlendirme protokolleri, perioperatif bakım ve uzun vadeli metabolik takip konularını denetler. Revizyon cerrahisi endikasyonları, cerrahi komplikasyon yönetimi ve bariatrik cerrahi sonrası beslenme protokolleri konusunda içeriklerin klinik doğruluğunu sağlar. Türkiye'deki bariatrik cerrahi istatistikleri ve hasta seçim kriterleri ile ilgili verileri doğrular.</p>
  <div class="dk-areas">
  <h4>İnceleme Alanları</h4>
  <div class="dk-tags">
@@ -240,6 +242,8 @@
  <span class="dk-tag">Gastrik Bypass</span>
  <span class="dk-tag">Ameliyat Hazırlığı</span>
  <span class="dk-tag">Komplikasyonlar</span>
+ <span class="dk-tag">Revizyon Cerrahisi</span>
+ <span class="dk-tag">Metabolik Cerrahi</span>
  </div>
  </div>
  </div>
@@ -253,14 +257,16 @@
  <span class="dk-role">Kurul Üyesi</span>
  </div>
  </div>
- <p class="dk-desc">Beslenme planları, diyet türleri, besin değerleri ve beslenme alışkanlıkları konularındaki içerikleri inceler.</p>
+ <p class="dk-desc">Kanıta dayalı beslenme planları, klinik diyet protokolleri (çok düşük kalorili diyetler, Akdeniz diyeti, DASH diyeti), makro ve mikro besin öğesi dengeleri, bariatrik cerrahi öncesi/sonrası beslenme programları ve metabolik beslenme tedavisini kapsar. Aralıklı oruç, düşük karbonhidrat ve ketojenik diyetlerin bilimsel kanıt düzeylerini değerlendirir. Türk mutfağına uygun sağlıklı beslenme önerilerinin pratik uygulanabilirliğini denetler.</p>
  <div class="dk-areas">
  <h4>İnceleme Alanları</h4>
  <div class="dk-tags">
- <span class="dk-tag">Diyet Programları</span>
+ <span class="dk-tag">Klinik Beslenme</span>
  <span class="dk-tag">Kalori Yönetimi</span>
  <span class="dk-tag">Akdeniz Diyeti</span>
  <span class="dk-tag">Aralıklı Oruç</span>
+ <span class="dk-tag">Bariatrik Beslenme</span>
+ <span class="dk-tag">VLCD Protokolleri</span>
  </div>
  </div>
  </div>
@@ -274,14 +280,16 @@
  <span class="dk-role">Kurul Üyesi</span>
  </div>
  </div>
- <p class="dk-desc">Fiziksel aktivite programları, egzersiz güvenliği ve hareketin metabolik etkileri konularını değerlendirir.</p>
+ <p class="dk-desc">Obez bireyler ve kronik hastalığı olanlar için güvenli fiziksel aktivite programları, egzersiz reçeteleme ilkeleri, kardiyovasküler ve kas-iskelet sistemi güvenlik protokolleri ile hareketin metabolik etkileri konularını değerlendirir. HIIT, kuvvet antrenmanı ve düşük yoğunluklu aktivitelerin kilo yönetimindeki etkinliğine dair kanıt düzeylerini inceler. 50 yaş üstü bireyler ve bariatrik cerrahi sonrası hastalar için egzersiz önerilerinin uygunluğunu denetler.</p>
  <div class="dk-areas">
  <h4>İnceleme Alanları</h4>
  <div class="dk-tags">
- <span class="dk-tag">HIIT & Kardio</span>
+ <span class="dk-tag">HIIT ve Kardio</span>
  <span class="dk-tag">Kuvvet Antrenmanı</span>
- <span class="dk-tag">Esneklik</span>
+ <span class="dk-tag">Esneklik ve Mobilite</span>
  <span class="dk-tag">Egzersiz Güvenliği</span>
+ <span class="dk-tag">Egzersiz Reçeteleme</span>
+ <span class="dk-tag">Rehabilitasyon</span>
  </div>
  </div>
  </div>
@@ -295,7 +303,7 @@
  <span class="dk-role">Kurul Üyesi</span>
  </div>
  </div>
- <p class="dk-desc">İçeriklerin anlaşılabilirliğini, hasta perspektifinden uygunluğunu ve pratik faydasını değerlendirir.</p>
+ <p class="dk-desc">İçeriklerin sağlık okuryazarlığı düzeyi farklı okuyucular tarafından anlaşılabilirliğini, hasta perspektifinden pratik uygulanabilirliğini ve gerçekçi beklenti yönetimini değerlendirir. Tıbbi jargonun sadeleştirilmesi, karar verme süreçlerinin desteklenmesi ve içeriklerin duygusal tonunun uygunluğu konularında geri bildirim sağlar. Obezite ile yaşayan bireylerin karşılaştığı stigma ve psikolojik zorlukları göz önünde bulundurarak içeriklerin saygılı ve kapsayıcı olmasını denetler.</p>
  <div class="dk-areas">
  <h4>İnceleme Alanları</h4>
  <div class="dk-tags">
@@ -303,6 +311,8 @@
  <span class="dk-tag">Hasta Deneyimi</span>
  <span class="dk-tag">Erişilebilirlik</span>
  <span class="dk-tag">Pratik Uygulanabilirlik</span>
+ <span class="dk-tag">Stigma Duyarlılığı</span>
+ <span class="dk-tag">Sağlık Okuryazarlığı</span>
  </div>
  </div>
  </div>
