--- a/pages/editoryal-politika.html
+++ b/pages/editoryal-politika.html
@@ -269,13 +269,40 @@
  <section class="ep-section">
  <div class="ep-section-icon"></div>
  <h2>Kaynak Politikamız</h2>
- <p>Güvenilirliğimizin temelinde şeffaf kaynak kullanımı yatar. Her içeriğimizde kullandığımız kaynakları açıkça belirtiriz.</p>
+ <p>Güvenilirliğimizin temelinde şeffaf ve hiyerarşik kaynak kullanımı yatar. Her içeriğimizde kullandığımız kaynakları açıkça belirtiriz.</p>
+
+ <h3 style="font-size:1.1rem;color:#195157;margin:1.5rem 0 0.75rem;">Kaynak Hiyerarşimiz (Öncelik Sırası)</h3>
  <ul>
- <li>Hakemli bilimsel dergilerde yayınlanmış araştırmaları tercih ederiz</li>
- <li>Dünya Sağlık Örgütü, T.C. Sağlık Bakanlığı gibi resmi kurumların verilerini kullanırız</li>
- <li>Meta-analiz ve sistematik derlemeleri bireysel çalışmalara tercih ederiz</li>
- <li>Her kaynağı doğrudan linkle veya DOI numarasıyla belirtiriz</li>
+ <li><strong>1. Sistematik derlemeler ve meta-analizler</strong> — Cochrane Reviews, PRISMA uyumlu derlemeler</li>
+ <li><strong>2. Randomize kontrollü çalışmalar (RKÇ)</strong> — Altın standart deneysel çalışmalar</li>
+ <li><strong>3. Büyük kohort çalışmaları</strong> — Framingham, Nurses' Health Study gibi uzun vadeli gözlemsel çalışmalar</li>
+ <li><strong>4. Ulusal ve uluslararası kılavuzlar</strong> — WHO, AHA, ESC, AACE, T.C. Sağlık Bakanlığı, Türk Endokrinoloji Derneği kılavuzları</li>
+ <li><strong>5. Resmi istatistik kurumları</strong> — TÜİK, OECD, Eurostat verileri</li>
+ <li><strong>6. Hakemli dergilerdeki bireysel çalışmalar</strong> — NEJM, Lancet, JAMA, BMJ, Nature Medicine</li>
+ </ul>
+
+ <h3 style="font-size:1.1rem;color:#195157;margin:1.5rem 0 0.75rem;">Kullanmadığımız Kaynaklar</h3>
+ <ul>
+ <li>Hakemli dergide yayınlanmamış ön baskılar (preprint) tek kaynak olarak kullanılmaz</li>
+ <li>Sosyal medya paylaşımları, kişisel bloglar veya haber siteleri birincil kaynak olarak kabul edilmez</li>
+ <li>İlaç firmaları veya takviye markalarının kendi yayınladığı tanıtım materyalleri kullanılmaz</li>
  <li>Çelişkili kanıtları açıkça belirtir, tek taraflı sunum yapmayız</li>
+ </ul>
+ </section>
+
+ <div class="ep-divider"></div>
+
+ <!-- Doğruluk Kontrol Süreci -->
+ <section class="ep-section">
+ <div class="ep-section-icon"></div>
+ <h2>Doğruluk Kontrol Sürecimiz (Fact-Checking)</h2>
+ <p>Her iddia ve istatistik, yayınlanmadan önce çok aşamalı bir doğrulama sürecinden geçer.</p>
+ <ul>
+ <li><strong>Birincil kaynak doğrulama:</strong> Her istatistik ve tıbbi bilgi, orijinal bilimsel yayından doğrulanır. İkincil kaynaklara (haber siteleri, özet makaleler) güvenilmez</li>
+ <li><strong>Çapraz kontrol:</strong> Önemli iddialar en az iki bağımsız kaynaktan teyit edilir</li>
+ <li><strong>Güncellik kontrolü:</strong> Kullanılan verilerin en güncel versiyonu olduğu doğrulanır. Eski çalışmalar yerine güncel meta-analizler tercih edilir</li>
+ <li><strong>Bağlam kontrolü:</strong> İstatistiklerin bağlamından koparılmadığı, çalışma popülasyonunun ve metodolojisinin doğru aktarıldığı kontrol edilir</li>
+ <li><strong>Uzman onayı:</strong> Tıbbi doğruluk gerektiren içerikler, ilgili alandaki danışma kurulu üyemiz tarafından onaylanır</li>
  </ul>
  </section>
 
@@ -287,11 +314,27 @@
  <h2>Güncelleme Politikamız</h2>
  <p>Tıbbi bilgi sürekli gelişir. İçeriklerimizi güncel tutmak en önemli sorumluluklarımızdan biridir.</p>
  <ul>
- <li>Tüm içerikler en az 6 ayda bir gözden geçirilir</li>
- <li>Yeni araştırma sonuçları yayınlandığında ilgili içerikler güncellenir</li>
- <li>Her içerikte "son güncelleme tarihi" açıkça belirtilir</li>
- <li>Önemli güncellemeler okuyuculara bildirilir</li>
- <li>Güncelliğini yitiren içerikler arşivlenir veya yeniden yazılır</li>
+ <li>Tüm içerikler en az 6 ayda bir sistematik olarak gözden geçirilir</li>
+ <li>Yeni meta-analiz, kılavuz değişikliği veya önemli RKÇ sonuçları yayınlandığında ilgili içerikler 30 gün içinde güncellenir</li>
+ <li>Her içerikte "ilk yayın tarihi" ve "son güncelleme tarihi" açıkça belirtilir</li>
+ <li>Önemli güncellemeler, değişikliğin kapsamını açıklayan bir not ile okuyuculara bildirilir</li>
+ <li>Güncelliğini yitiren veya artık geçerli olmayan içerikler, durumu belirten bir uyarı ile arşivlenir ya da yeniden yazılır</li>
+ <li>FDA, EMA veya T.C. Sağlık Bakanlığı tarafından yapılan ilaç onayı/geri çekme kararları acil güncelleme kapsamında değerlendirilir</li>
+ </ul>
+ </section>
+
+ <div class="ep-divider"></div>
+
+ <!-- Düzeltme Politikası -->
+ <section class="ep-section">
+ <div class="ep-section-icon"></div>
+ <h2>Düzeltme ve Hata Politikamız</h2>
+ <p>Hata yapmak mümkündür; önemli olan hataları nasıl ele aldığımızdır. Düzeltme sürecimiz şeffaflık ilkesine dayanır.</p>
+ <ul>
+ <li><strong>Küçük düzeltmeler:</strong> Yazım hataları, bozuk bağlantılar ve biçimlendirme sorunları sessizce düzeltilir</li>
+ <li><strong>Olgusal düzeltmeler:</strong> İstatistik hataları, yanlış kaynak atıfları veya bilimsel yanlışlıklar "Düzeltme Notu" eklenerek düzeltilir. Orijinal hatalı bilgi ve yapılan değişiklik açıkça belirtilir</li>
+ <li><strong>Geri çekme:</strong> Temel argümanı hatalı olan veya yanıltıcı bulunan içerikler, durumu açıklayan bir uyarı ile yayından kaldırılır veya yeniden yazılır</li>
+ <li>Okuyucular, iletişim formu veya e-posta aracılığıyla hata bildirimi yapabilir. Her bildirim 7 iş günü içinde değerlendirilir</li>
  </ul>
  </section>
 
@@ -300,13 +343,14 @@
  <!-- Çıkar Çatışması -->
  <section class="ep-section">
  <div class="ep-section-icon"></div>
- <h2>Çıkar Çatışması Beyanı</h2>
- <p>Şeffaflık ilkemiz gereği, olası çıkar çatışmalarını açıkça beyan ederiz:</p>
+ <h2>Çıkar Çatışması Politikası</h2>
+ <p>Şeffaflık ilkemiz gereği, olası çıkar çatışmalarını sistematik olarak yönetir ve açıkça beyan ederiz:</p>
  <ul>
- <li>Danışma kurulu üyelerimizin olası çıkar çatışmaları düzenli olarak değerlendirilir</li>
- <li>İçerik yazarlarımız herhangi bir sağlık kuruluşuyla ticari ilişki içinde değildir</li>
- <li>Platform geliri tamamen okuyucu desteği ve bağımsız reklam gelirlerinden oluşur</li>
- <li>Sponsorlu içerik kabul etmiyoruz</li>
+ <li><strong>Danışma kurulu:</strong> Üyelerimiz, herhangi bir ilaç firması, tıbbi cihaz şirketi veya klinik zinciri ile ticari ilişki beyanında bulunur. Çıkar çatışması bulunan üye, ilgili içeriğin değerlendirmesine katılmaz</li>
+ <li><strong>İçerik ekibi:</strong> İçerik yazarları ve editörler, sağlık sektöründe ticari ilişkileri olmadığını yıllık olarak beyan eder</li>
+ <li><strong>Finansman:</strong> Platform, Tıpta Yapay Zeka Derneği bünyesinde kar amacı gütmeden faaliyet gösterir. Gelirler tamamen bağımsız kaynaklardan oluşur</li>
+ <li><strong>Reklam politikası:</strong> Sponsorlu içerik, native reklam veya ilaç firması destekli içerik kabul etmiyoruz. Sitede yer alan reklam bantları varsa, bunlar editoryal kararlarımızdan tamamen bağımsızdır ve açıkça "reklam" olarak işaretlenir</li>
+ <li><strong>Hediye politikası:</strong> Ekip üyelerimiz, sağlık sektöründen hediye, seyahat desteği veya konuşmacı ücreti kabul etmez</li>
  </ul>
  </section>
 
