--- a/pages/egzersiz/esneklik-mobilite.html
+++ b/pages/egzersiz/esneklik-mobilite.html
@@ -288,6 +288,31 @@
  <li>Ağrı hissedersem duruyor, germe sırasında zorlamıyorum</li>
  </ul>
 
+ <h2>Bu Konu Kilo Yönetimiyle Nasıl Bağlantılı?</h2>
+ <p>Esneklik ve mobilite çalışmaları, kilo yönetimini dolaylı ama önemli yollardan destekler:</p>
+ <ul>
+ <li><strong>Hareket kalitesi artışı:</strong> Daha iyi mobilite, kuvvet ve kardio egzersizlerini daha etkili ve güvenli yapmanızı sağlar — bu da daha fazla kalori yakımı demektir</li>
+ <li><strong>Sakatlık önleme:</strong> Esneklik çalışması, egzersiz sırasında yaralanma riskini azaltır. Sakatlık = egzersizden uzak kalma = kilo artışı</li>
+ <li><strong>Stres azaltma:</strong> Yoga ve pilates, kortizol seviyelerini düşürür. Yüksek kortizol, özellikle karın bölgesinde yağ depolanmasını artırır</li>
+ <li><strong>Daha aktif yaşam:</strong> İyi esneklik ve mobilite, günlük aktiviteleri kolaylaştırır — merdiven çıkma, yere oturma-kalkma, yürüyüş. Daha aktif günlük yaşam = daha yüksek kalori harcaması</li>
+ <li><strong>Uyku kalitesi:</strong> Akşam yoga veya germe rutinleri uyku kalitesini artırır. Kaliteli uyku, iştah hormonlarını düzenler</li>
+ <li><strong>Yoga ve kalori:</strong> Vinyasa yoga seansında 300-500 kalori yakılabilir — düşümsenmemesi gereken bir miktar</li>
+ </ul>
+
+ <h2>Sık Sorulan Sorular</h2>
+
+ <h3>Çok esnek değilim, yoga yapabilir miyim?</h3>
+ <p>"Esnek olmadığım için yoga yapamam" demek, "kirli olduğum için duş alamam" demek gibidir. Yoga, esneklik gerektirir değil, esneklik kazandırır. Başlangıç seviyesindeki derslerle başlayın ve vücudunuzun kendi hızında ilerlemesine izin verin.</p>
+
+ <h3>Yoga mı yoksa pilates mi daha iyi?</h3>
+ <p>İkisi farklı odaklara sahiptir. Yoga daha bütünsel (esneklik + mental huzur + nefes), pilates daha core ve postür odaklıdır. İdeal olan ikisini de programınıza dahil etmektir. Sırt ağrınız varsa pilates, stres yönetimi istiyorsanız yoga önce deneyin.</p>
+
+ <h3>Günde kaç dakika germe yapmalıyım?</h3>
+ <p>ACSM, haftada en az 2-3 gün, her büyük kas grubuna 30-60 saniye germe önermektedir. Günde 10 dakika mobilite rutini ile başlamak mükemmel bir adımdır.</p>
+
+ <h3>Germe sırasında ağrı hissetmeli miyim?</h3>
+ <p>Hafif bir "çekilme" hissi normaldir, ancak keskin ağrı değil. "Rahatsız ama dayanılabilir" eşiğinde kalın. Ağrı hissederseniz hareketi geri çekin. "No pain, no gain" yaklaşımı germe için geçerli değildir — kasları zorlayarak yırtabilirsiniz.</p>
+
  <div class="sources">
  <h4> Kaynaklar ve Referanslar</h4>
  <ol>
