--- a/pages/egzersiz/grup-egzersizleri.html
+++ b/pages/egzersiz/grup-egzersizleri.html
@@ -169,4 +169,152 @@
  <p>Araştırmalar, insanların %70'inden fazlasının ilk grup dersine gitmeden önce kaygı yaşadığını gösteriyor. İşte rahatlamanızı sağlayacak gerçekler:</p>
  <ul>
  <li>Herkes bir gün "yeni" olarak başladı</li>
- <li>İyi eğit
+ <li>İyi eğitmenler yeni katılımcılara ekstra ilgi gösterir</li>
+ <li>Kimse sizi yargılamıyor — herkes kendi antrenmanına odaklıdır</li>
+ <li>İlk derste mükemmel olmak zorunda değilsiniz; sadece katılmak yeterli</li>
+ </ul>
+ </div>
+
+ <h2>Nasıl Başlamalı?</h2>
+ <p>Grup egzersizine sıfırdan başlayanlar için adım adım plan:</p>
+
+ <h3>Hafta 1-2: Keşif Dönemi</h3>
+ <ul>
+ <li>Çevrenizdeki spor salonları ve stüdyoları araştırın</li>
+ <li>En az 2-3 farklı sınıf türünü deneyin (çoğu salon ücretsiz deneme sunar)</li>
+ <li>Başlangıç veya "tüm seviyeler" etiketli dersleri tercih edin</li>
+ <li>Dersten 10 dakika önce gidin, eğitmenle tanışın ve yeni olduğunuzu bildirin</li>
+ </ul>
+
+ <h3>Hafta 3-4: Seçim ve Taahhüt</h3>
+ <ul>
+ <li>En çok keyif aldığınız 1-2 sınıfı seçin</li>
+ <li>Haftalık programa sabitleyin (haftada 2-3 ders)</li>
+ <li>Takvime kaydedin — bir randevu gibi davranın</li>
+ <li>Bir egzersiz arkadaşı bulun — devamsızlık oranını %50 azaltır</li>
+ </ul>
+
+ <h3>Hafta 5-8: Alışkanlık Oluşturma</h3>
+ <ul>
+ <li>Düzenli programınıza sadık kalın</li>
+ <li>Hareketleri daha iyi uygulamaya odaklanın</li>
+ <li>Eğitmenle ilerlemenizi paylaşın</li>
+ <li>Zaman zaman farklı bir sınıf deneyin — çapraz antrenman faydalıdır</li>
+ </ul>
+
+ <h3>Seviye Atlamak (İlerleme Planı)</h3>
+ <ul>
+ <li><strong>Başlangıç (0-3 ay):</strong> "Başlangıç" seviyesindeki dersler, haftada 2-3 kez. Hareketleri doğru form ile öğrenme.</li>
+ <li><strong>Orta seviye (3-6 ay):</strong> Normal derslere geçiş, yoğunluğu kademeli artırma. Farklı sınıf türlerini kombinasyon halinde yapma.</li>
+ <li><strong>İleri seviye (6+ ay):</strong> "Advanced" dersler, liderlik rolleri (ön sırada durma), farklı stüdyolar deneme.</li>
+ </ul>
+
+ <h2>Türkiye'de Grup Egzersizi Toplulukları</h2>
+ <p>Salon dışında da birçok ücretsiz veya uygun fiyatlı topluluk bulunmaktadır:</p>
+ <ul>
+ <li><strong>Parkrun Türkiye:</strong> Her cumartesi sabahı ücretsiz 5K koşu etkinlikleri (Ankara, İstanbul, İzmir ve diğer şehirlerde)</li>
+ <li><strong>Yürüyüş grupları:</strong> Belediye destekli sabah yürüyüş grupları, DOSK (Doğa Sporları Kulüpleri)</li>
+ <li><strong>Yoga toplulukları:</strong> Park yogası etkinlikleri (yazın ücretsiz açık hava seansları)</li>
+ <li><strong>CrossFit kutuları:</strong> Türkiye genelinde 100+ resmi CrossFit kutusu</li>
+ <li><strong>Dans okulları:</strong> Salsa, tango, swing — sosyal dans hem egzersiz hem sosyalleşme</li>
+ <li><strong>Bisiklet grupları:</strong> Pazar sabahı bisiklet turları, Critical Mass etkinlikleri</li>
+ <li><strong>Online topluluklar:</strong> Facebook ve Meetup üzerinden yerel egzersiz grupları</li>
+ </ul>
+
+ <h2>Bu Konu Kilo Yönetimiyle Nasıl Bağlantılı?</h2>
+ <p>Grup egzersizleri, kilo yönetimi açısından bireysel antrenmanın ötesinde avantajlar sunar:</p>
+ <ul>
+ <li><strong>Daha yüksek kalori yakımı:</strong> Grup ortamında insanlar bireysel egzersize göre ortalama %10-15 daha fazla efor sarf eder (Köhler etkisi)</li>
+ <li><strong>Tutarlılık:</strong> Grup taahhüdü sayesinde devamsızlık oranı düşer — düzenli egzersiz, kilo yönetiminin temel taşıdır</li>
+ <li><strong>Yapılandırılmış program:</strong> Eğitmen liderliğinde planlı antrenmanlar, kendinize bırakıldığınızda atlayabileceğiniz kas gruplarını da çalıştırır</li>
+ <li><strong>Sosyal destek:</strong> Kilo verme yolculuğunda yalnız olmamak, başarı şansını %65 artırır (Wing & Jeffery, 1999)</li>
+ <li><strong>Eğlence:</strong> Eğlendirici egzersiz, uzun vadede sürdürülebilirdir — sıkıcı egzersiz bırakılır</li>
+ <li><strong>Çeşitlilik:</strong> Farklı sınıf türleri vücudun adaptasyonunu engeller ve metabolizmayı aktif tutar</li>
+ </ul>
+
+ <h2>Pratik İpuçları</h2>
+ <ul>
+ <li><strong>Zamanlamayı optimize edin:</strong> İş yerine veya eve yakın salon seçin — ulaşım engeli en büyük devamsızlık nedenidir</li>
+ <li><strong>Hazır gelin:</strong> Spor çantanızı her zaman hazır tutun. Akşam dersi varsa sabah çantanızı hazırlayın</li>
+ <li><strong>Su şişenizi unutmayın:</strong> Çoğu grup dersi yoğundur; hidrasyon kritiktir</li>
+ <li><strong>Ön sıradan korkmayın:</strong> Eğitmeni daha iyi görürsünüz ve motivasyon artar</li>
+ <li><strong>Rakam takıntısı yapmayın:</strong> Kalori sayacı değil, keyif ve tutarlılık odaklı olun</li>
+ <li><strong>Farklı eğitmenleri deneyin:</strong> Aynı sınıf türü, farklı eğitmenlerle tamamen farklı deneyim olabilir</li>
+ <li><strong>Düzenli olun:</strong> Haftada 2-3 kez gitmek, ayda bir "kahramanlık seansı" yapmaktan çok daha etkilidir</li>
+ <li><strong>Geri bildirim verin:</strong> Eğitmeninize neyi sevdiğinizi ve neyde zorlandığınızı söyleyin — bu ilişki sizi motive eder</li>
+ </ul>
+
+ <h2>Sık Sorulan Sorular</h2>
+
+ <h3>Çok kiloluyum, grup dersine gitmekten utanırım. Ne yapmalıyım?</h3>
+ <p>Bu kaygı çok yaygındır ve tamamen anlaşılabilir. Birkaç öneri: Önce düşük yoğunluklu dersleri deneyin (yoga, aqua aerobik). Arkadaşınızla gidin. Hatırlayın ki herkes sağlığı için orada — kimse sizi yargılamıyor. Birçok salon, farklı vücut tiplerine uygun özel dersler sunmaktadır.</p>
+
+ <h3>Grup dersi mi yoksa bireysel antrenman mı daha iyi?</h3>
+ <p>İkisi de değerlidir ve farklı ihtiyaçlara cevap verir. Motivasyon ve sosyal destek ihtiyacınız varsa grup dersleri üstündür. Spesifik bir hedef (kas yapma, belirli bir spor) peşindeyseniz bireysel antrenman daha hedefli olabilir. İdeali: haftanın bir kısmını grupta, bir kısmını bireysel geçirmek.</p>
+
+ <h3>Haftada kaç grup dersi yapmalıyım?</h3>
+ <p>Başlangıçta 2-3 ders yeterlidir. Orta seviyede 3-4 derse çıkabilirsiniz. Önemli olan art arda yüksek yoğunluklu dersler yapmamanız ve dinlenme günleri bırakmanızdır.</p>
+
+ <h3>Grup dersine gitmeden önce yemeli miyim?</h3>
+ <p>Dersten 1-2 saat önce hafif bir atıştırmalık (muz, bir avuç badem, yoğurt) ideal. Çok tok veya çok aç gitmeyin. Hidrasyon için dersten 2 saat önce 500ml su için.</p>
+
+ <h3>Online grup dersleri etkili mi?</h3>
+ <p>Evet, özellikle pandemi sonrası online grup dersleri gelişti. Sosyal hesap verebilirlik unsuru biraz azalır, ancak erişilebilirlik artar. Zoom veya canlı yayın dersleri, kayıtlı videolardan daha motive edicidir çünkü "birlikte yapma" hissi vardır.</p>
+
+ <div class="sources">
+ <h4> Kaynaklar ve Referanslar</h4>
+ <ol>
+ <li>Yorks DM, et al. "Effects of Group Fitness Classes on Stress and Quality of Life." Journal of the American Osteopathic Association, 2017;117(11):e17.</li>
+ <li>Cohen EE, et al. "Rowers' high: behavioural synchrony is correlated with elevated pain thresholds." Biology Letters, 2010;6(1):106-108.</li>
+ <li>Irwin BC, et al. "Aerobic exercise is promoted when individual performance affects the group." Annals of Behavioral Medicine, 2012;44(2):151-159.</li>
+ <li>Wing RR, Jeffery RW. "Benefits of recruiting participants with friends and increasing social support for weight loss and maintenance." Journal of Consulting and Clinical Psychology, 1999;67(1):132-138.</li>
+ <li>Beauchamp MR, et al. "Group-based physical activity for older adults (GOAL)." BMC Geriatrics, 2018;18:78.</li>
+ <li>Dunlop WL, Beauchamp MR. "Does similarity make a difference? Predicting cohesion and attendance behaviors within exercise group settings." Group Dynamics, 2011;15(3):258-266.</li>
+ <li>American College of Sports Medicine. "Group Exercise Instructor Certification." ACSM, 2020.</li>
+ </ol>
+ </div>
+
+ <div class="guide-cta">
+ <h3>Size uygun egzersiz programını bulun</h3>
+ <p>Kişisel sağlık profili oluşturarak hedeflerinize özel grup dersi önerileri alın.</p>
+ <a href="../test.html" class="cta-btn">Teste Başla →</a>
+ </div>
+ </main>
+
+ <footer class="footer">
+ <div class="footer-inner">
+ <div class="footer-grid">
+ <div class="footer-brand">
+ <a href="../../index.html"><img src="../../images/logo-white.svg" alt="UzunYaşa" class="footer-logo"></a>
+ <p>Türkiye'nin bağımsız, kanıta dayalı sağlıklı yaşam platformu.</p>
+ <p style="font-size:0.85rem;font-style:italic;opacity:0.6;margin-top:0.25rem;">Türkiye uzun yaşasın diye.</p>
+ </div>
+ <div class="footer-col">
+ <h4>Keşfet</h4>
+ <a href="../beslenme.html">Beslenme</a>
+ <a href="../egzersiz.html">Egzersiz</a>
+ <a href="../uyku-stres.html">Uyku & Stres</a>
+ <a href="../tedavi.html">Tedavi Seçenekleri</a>
+ </div>
+ <div class="footer-col">
+ <h4>Araçlar</h4>
+ <a href="../test.html">Bana Ne Uygun?</a>
+ <a href="../araclar.html#bmi">BMI Hesaplayıcı</a>
+ <a href="../araclar.html#kalori">Kalori Hesaplayıcı</a>
+ </div>
+ <div class="footer-col">
+ <h4>Hakkımızda</h4>
+ <a href="../hakkimizda.html">Ekibimiz</a>
+ <a href="../bilim.html">Bilimsel Yaklaşım</a>
+ <a href="../hakkimizda.html#iletisim">İletişim</a>
+ </div>
+ </div>
+ <div class="footer-bottom">
+ <span>© 2026 UzunYaşa. Tüm hakları saklıdır.</span>
+ <span>Gizlilik Politikası | Kullanım Koşulları</span>
+ </div>
+ </div>
+ </footer>
+ <script src="../../scripts/content-page.js" defer></script>
+</body>
+</html>
