--- a/pages/egzersiz/hiit-tabata.html
+++ b/pages/egzersiz/hiit-tabata.html
@@ -107,4 +107,237 @@
 
  <div class="info-box warning">
  <h4> Gerçek Tabata Çok Zorludur</h4>
- <p>Sosyal medyada "Tabata" olarak paylaşılan antrenmanların çoğu, orijinal Tabata yoğunluğuna yaklaşmaz bile. Gerçek Tabata, antrenman sonunda yere yığılmanız gereken düzeyde yoğundur. Yeni başlayanlar için uygun değildir — önce bir aerobik temel oluş
+ <p>Sosyal medyada "Tabata" olarak paylaşılan antrenmanların çoğu, orijinal Tabata yoğunluğuna yaklaşmaz bile. Gerçek Tabata, antrenman sonunda yere yığılmanız gereken düzeyde yoğundur. Yeni başlayanlar için uygun değildir — önce bir aerobik temel oluşturun (en az 4-6 hafta düzenli kardio).</p>
+ </div>
+
+ <h2>HIIT vs. Geleneksel Kardio</h2>
+ <p>HIIT ve düz tempolu kardio birbirinin rakibi değil, tamamlayıcısıdır. Her ikisinin de avantajları vardır:</p>
+ <ul>
+ <li><strong>HIIT avantajları:</strong> Zaman verimliliği, yüksek EPOC (afterburn) etkisi, anaerobik kapasite artışı, insülin duyarlılığı iyileşmesi</li>
+ <li><strong>Düz tempolu kardio avantajları:</strong> Daha düşük sakatlık riski, daha sürdürülebilir, daha iyi yağ oksidasyonu oranı, stres yönetimi</li>
+ <li><strong>Optimal kombinasyon:</strong> Haftada 1-2 HIIT seansı + 2-3 orta yoğunluklu kardio seansı</li>
+ </ul>
+
+ <h2>Nasıl Başlamalı? Seviyeye Göre İlerleme Planı</h2>
+
+ <h3>Seviye 1: Tamamen Yeni Başlayan (Hafta 1-4)</h3>
+ <p>HIIT'e doğrudan atlamayın. Önce bir aerobik temel oluşturun:</p>
+ <ul>
+ <li>Haftada 3-4 gün, 20-30 dakika orta tempolu yürüyüş veya bisiklet</li>
+ <li>Son 2 haftada yürüyüşe 30 saniyelik tempolu aralıklar ekleyin</li>
+ <li>Hedef: 30 dakika kesintisiz orta yoğunlukta egzersiz yapabilmek</li>
+ </ul>
+
+ <h3>Seviye 2: Başlangıç HIIT (Hafta 5-8)</h3>
+ <p>Haftada 2 gün, düşük yoğunluklu HIIT:</p>
+ <ul>
+ <li><strong>Yapı:</strong> 30 saniye efor + 60 saniye dinlenme x 8 tur</li>
+ <li><strong>Hareketler:</strong> Yerinde koşu, jumping jack, squat, yüksek diz kaldırma</li>
+ <li><strong>Toplam süre:</strong> Isınma (5 dk) + HIIT (12 dk) + Soğuma (5 dk) = 22 dakika</li>
+ <li><strong>Yoğunluk:</strong> Maksimumun %70-80'i (konuşmakta zorlanıyorsunuz ama birkaç kelime söyleyebiliyorsunuz)</li>
+ </ul>
+
+ <h3>Seviye 3: Orta Seviye HIIT (Hafta 9-16)</h3>
+ <p>Haftada 2-3 gün:</p>
+ <ul>
+ <li><strong>Yapı:</strong> 30 saniye efor + 30 saniye dinlenme x 10-12 tur</li>
+ <li><strong>Hareketler:</strong> Burpee, mountain climber, box jump, battle rope, sprint</li>
+ <li><strong>Toplam süre:</strong> Isınma (5 dk) + HIIT (10-12 dk) + Soğuma (5 dk) = 22 dakika</li>
+ <li><strong>Yoğunluk:</strong> Maksimumun %80-90'ı</li>
+ </ul>
+
+ <h3>Seviye 4: İleri Seviye / Tabata (Hafta 17+)</h3>
+ <p>Haftada 2-3 gün (asla art arda günler):</p>
+ <ul>
+ <li><strong>Tabata protokolü:</strong> 20 saniye ALL-OUT + 10 saniye dinlenme x 8 tur (4 dakika)</li>
+ <li><strong>Çoklu Tabata:</strong> 2-4 farklı Tabata bloğu, aralarında 2 dakika dinlenme</li>
+ <li><strong>Hareketler:</strong> Sprint, assault bike, rower, thrusters, burpee</li>
+ <li><strong>Yoğunluk:</strong> Maksimumun %90-100'ü</li>
+ </ul>
+
+ <h2>Örnek HIIT Antrenmanları</h2>
+
+ <div class="workout-card">
+ <h4>Başlangıç HIIT (Ekipmansız, 20 dk)</h4>
+ <p><strong>Isınma (5 dk):</strong> Yerinde yürüyüş, kol dairesi, kalça dairesi, hafif squat</p>
+ <p><strong>Ana bölüm (10 dk):</strong> 30 sn efor + 60 sn dinlenme</p>
+ <ol>
+ <li>Jumping Jack</li>
+ <li>Squat</li>
+ <li>Yüksek Diz Kaldırma</li>
+ <li>Plank Omuz Dokunma</li>
+ <li>Lateral Shuffle</li>
+ <li>Lunge (dönüşümlü)</li>
+ </ol>
+ <p><strong>Soğuma (5 dk):</strong> Yavaş yürüyüş, hamstring germe, quadriceps germe, göğüs açma</p>
+ </div>
+
+ <div class="workout-card">
+ <h4>Orta Seviye HIIT (Ekipmansız, 25 dk)</h4>
+ <p><strong>Isınma (5 dk):</strong> Dinamik germe, A-skip, B-skip, inchworm</p>
+ <p><strong>Ana bölüm (15 dk):</strong> 40 sn efor + 20 sn dinlenme x 3 tur</p>
+ <ol>
+ <li>Burpee</li>
+ <li>Mountain Climber</li>
+ <li>Jump Squat</li>
+ <li>Push-up</li>
+ <li>Tuck Jump</li>
+ </ol>
+ <p>Turlar arasında 1 dakika dinlenme.</p>
+ <p><strong>Soğuma (5 dk):</strong> Statik germe rutini</p>
+ </div>
+
+ <div class="workout-card">
+ <h4>Tabata Antrenmanı (İleri Seviye, 20 dk)</h4>
+ <p><strong>Isınma (5 dk):</strong> Tempolu yürüyüş, dinamik germe, hafif sprint</p>
+ <p><strong>Tabata 1 (4 dk):</strong> Sprint (20 sn ALL-OUT + 10 sn dinlenme x 8)</p>
+ <p><strong>Dinlenme:</strong> 2 dakika aktif yürüyüş</p>
+ <p><strong>Tabata 2 (4 dk):</strong> Burpee (20 sn ALL-OUT + 10 sn dinlenme x 8)</p>
+ <p><strong>Soğuma (5 dk):</strong> Yavaş yürüyüş, derin nefes, statik germe</p>
+ </div>
+
+ <h2>Haftalık Örnek HIIT Programı (Orta Seviye)</h2>
+ <ul>
+ <li><strong>Pazartesi:</strong> HIIT seansı (25 dk)</li>
+ <li><strong>Salı:</strong> Orta tempolu yürüyüş veya yüzme (30-40 dk)</li>
+ <li><strong>Çarşamba:</strong> Kuvvet antrenmanı (45 dk)</li>
+ <li><strong>Perşembe:</strong> HIIT seansı (25 dk)</li>
+ <li><strong>Cuma:</strong> Yoga veya mobilite (30 dk)</li>
+ <li><strong>Cumartesi:</strong> Uzun yürüyüş veya bisiklet (45-60 dk)</li>
+ <li><strong>Pazar:</strong> Dinlenme veya hafif germe</li>
+ </ul>
+
+ <h2>Toparlanma: HIIT Sonrası Ne Yapmalı?</h2>
+ <ul>
+ <li><strong>Soğuma:</strong> Asla aniden durarak bitirmeyin. 5 dakika yavaş tempoda soğuma yapın</li>
+ <li><strong>Germe:</strong> Egzersiz sonrası 5-10 dakika statik germe — DOMS'u (gecikmiş kas ağrısı) azaltır</li>
+ <li><strong>Hidrasyon:</strong> Egzersiz sırasında ve sonrasında bol su. Yoğun terleme durumunda elektrolit takviyesi</li>
+ <li><strong>Beslenme:</strong> Antrenman sonrası 30-60 dakika içinde protein + karbonhidrat kombinasyonu (örn: muz + yoğurt, protein shake + muz)</li>
+ <li><strong>Uyku:</strong> HIIT sonrası toparlanma için kaliteli uyku kritiktir. 7-9 saat hedefleyin</li>
+ <li><strong>Aktif dinlenme:</strong> HIIT olmayan günlerde hafif yürüyüş veya yoga yapın — tamamen hareketsiz kalmayın</li>
+ </ul>
+
+ <div class="info-box danger">
+ <h4> Kimler HIIT Yapmamalı?</h4>
+ <p>Aşağıdaki durumlarda HIIT'e başlamadan önce mutlaka doktorunuza danışın:</p>
+ <ul>
+ <li>Kalp hastalığı veya yüksek tansiyon</li>
+ <li>Kontrol edilmeyen diyabet</li>
+ <li>Eklem sorunları (diz, kalça, ayak bileği)</li>
+ <li>Hamilelik (özellikle 2. ve 3. trimester)</li>
+ <li>Son 6 ayda cerrahi operasyon</li>
+ <li>6 aydan uzun süredir tamamen hareketsiz yaşam</li>
+ </ul>
+ </div>
+
+ <h2>Bu Konu Kilo Yönetimiyle Nasıl Bağlantılı?</h2>
+ <p>HIIT, kilo yönetimi açısından en etkili egzersiz yöntemlerinden biridir. Bunun birkaç nedeni vardır:</p>
+ <ul>
+ <li><strong>Yüksek kalori yakımı:</strong> 20 dakikalık HIIT seansında 200-400 kalori yakabilirsiniz — süreye oranla çok yüksek</li>
+ <li><strong>EPOC etkisi:</strong> Antrenman sonrası 24-48 saat boyunca metabolizmanız yüksek kalır. Bu ek kalori yakımı 50-200 kalori arasında değişir</li>
+ <li><strong>İnsülin duyarlılığı:</strong> HIIT, kas hücrelerinin glikoz alımını artırarak insülin direncini azaltır — bu da yağ depolanmasını yavaşlatır</li>
+ <li><strong>Kas kütlesi koruması:</strong> Uzun süreli düşük yoğunluklu kardiodan farklı olarak, HIIT kas kütlesini korur ve hatta artırabilir. Daha fazla kas = daha yüksek bazal metabolizma</li>
+ <li><strong>İştah düzenlemesi:</strong> Yüksek yoğunluklu egzersiz, iştah bastırıcı hormonları (peptit YY) artırır ve açlık hormonu ghrelin'i geçici olarak baskılar</li>
+ <li><strong>Viseral yağ azalması:</strong> HIIT, özellikle karın bölgesindeki tehlikeli iç organ yağlanmasını azaltmada düz tempolu kardiodan daha etkilidir (Maillard ve ark., 2018)</li>
+ </ul>
+ <p>Kilo vermek istiyorsanız, haftada 2-3 HIIT seansını dengeli beslenme ile kombinasyon halinde uygulamak en etkili stratejidir.</p>
+
+ <h2>Pratik İpuçları</h2>
+ <ul>
+ <li><strong>Zamanlayıcı kullanın:</strong> Tabata Timer gibi ücretsiz uygulamalar, aralıkları otomatik sayar ve sesli uyarı verir</li>
+ <li><strong>Müzik motivasyonu:</strong> 140-160 BPM tempolu müzik, HIIT performansını artırır</li>
+ <li><strong>Form her zaman önce gelir:</strong> Yorulduğunuzda form bozuluyorsa, yoğunluğu düşürün. Kötü formda hızlı hareket = sakatlık</li>
+ <li><strong>Isınmayı asla atlamayın:</strong> HIIT öncesi en az 5 dakika dinamik ısınma şarttır</li>
+ <li><strong>İlerlemeyi kaydedin:</strong> Her seansta tamamladığınız tur sayısını, hareketleri ve hissiyatınızı not alın</li>
+ <li><strong>Partner bulun:</strong> HIIT partneri motivasyonu artırır ve güvenlik sağlar</li>
+ <li><strong>Açık havada yapın:</strong> Park veya sahilde HIIT, kapalı mekana göre hem motivasyonu hem oksijen alımını artırır</li>
+ <li><strong>Aşırı antrenman belirtilerini bilin:</strong> Sürekli yorgunluk, uyku bozukluğu, performans düşüşü, sık hastalanma — bunlar vücudunuzun dinlenme istediğinin sinyalleridir</li>
+ </ul>
+
+ <h2>Sık Sorulan Sorular</h2>
+
+ <h3>HIIT her gün yapılabilir mi?</h3>
+ <p>Hayır. Gerçek HIIT vücuda yüksek stres yükler ve toparlanma süresi gerektirir. Haftada 2-3 seans idealdir; ardışık günlerde yapılmamalıdır. Arada düşük yoğunluklu egzersiz veya dinlenme günleri bırakın.</p>
+
+ <h3>HIIT mı yoksa kuvvet antrenmanı mı daha iyi?</h3>
+ <p>İkisi farklı amaçlara hizmet eder ve birbirini tamamlar. HIIT kardiyovasküler sağlık ve kalori yakımı için üstünken, kuvvet antrenmanı kas kütlesi ve kemik yoğunluğu için kritiktir. İdeal program ikisini de içerir.</p>
+
+ <h3>HIIT kaç dakika olmalı?</h3>
+ <p>Isınma ve soğuma dahil 20-30 dakika yeterlidir. Yüksek yoğunluklu bölüm (iş periyotları) 10-20 dakika arasında olmalıdır. HIIT'te kalite, kantiteden önemlidir.</p>
+
+ <h3>Yaşlılar HIIT yapabilir mi?</h3>
+ <p>Evet, ancak uyarlanmış versiyonlarla. "Yüksek yoğunluk" bireye göre değişir — 70 yaşında bir kişi için tempolu yürüyüş, 25 yaşında birinin sprint'ine eşdeğer yoğunluk olabilir. Doktor onayı alın ve düşük etkili hareketlerle (yüzme, bisiklet) başlayın.</p>
+
+ <h3>Boş mideyle mi, tok mideyle mi HIIT yapmalıyım?</h3>
+ <p>Kişisel tercihe bağlıdır. Boş mideyle (açlık HIIT) yağ yakımı oranı daha yüksek olabilir, ancak performans düşebilir. Tok mideyle mide bulantısı riski artar. İdeal: HIIT'ten 1-2 saat önce hafif bir atıştırmalık (muz, bir avuç badem).</p>
+
+ <h2>Kontrol Listesi: HIIT Güvenliği</h2>
+ <ul class="checklist">
+ <li>Her antrenman öncesi en az 5 dakika dinamik ısınma yapıyorum</li>
+ <li>Her antrenman sonrası soğuma ve germe yapıyorum</li>
+ <li>Ardışık günlerde HIIT yapmıyorum</li>
+ <li>Form bozulduğunda yoğunluğu düşürüyorum</li>
+ <li>Yeterli su içiyorum (öncesi, sırası, sonrası)</li>
+ <li>Haftada en fazla 3 HIIT seansı yapıyorum</li>
+ <li>Aşırı antrenman belirtilerini izliyorum</li>
+ <li>Düzenli olarak yoğunluğu kademeli artırıyorum</li>
+ </ul>
+
+ <div class="sources">
+ <h4> Kaynaklar ve Referanslar</h4>
+ <ol>
+ <li>Tabata I, et al. "Effects of moderate-intensity endurance and high-intensity intermittent training on anaerobic capacity and VO2max." Medicine & Science in Sports & Exercise, 1996;28(10):1327-1330.</li>
+ <li>Gillen JB, et al. "Twelve Weeks of Sprint Interval Training Improves Indices of Cardiometabolic Health Similar to Traditional Endurance Training." PLoS ONE, 2016;11(4):e0154075.</li>
+ <li>Weston KS, et al. "High-intensity interval training in patients with lifestyle-induced cardiometabolic disease." British Journal of Sports Medicine, 2014;48(16):1227-1234.</li>
+ <li>Maillard F, et al. "Effect of High-Intensity Interval Training on Total, Abdominal and Visceral Fat Mass." Sports Medicine, 2018;48(2):269-288.</li>
+ <li>Gibala MJ, et al. "Physiological adaptations to low-volume, high-intensity interval training." Journal of Physiology, 2012;590(5):1077-1084.</li>
+ <li>Boutcher SH. "High-intensity intermittent exercise and fat loss." Journal of Obesity, 2011;2011:868305.</li>
+ <li>Helgerud J, et al. "Aerobic high-intensity intervals improve VO2max more than moderate training." Medicine & Science in Sports & Exercise, 2007;39(4):665-671.</li>
+ <li>American College of Sports Medicine. "High-Intensity Interval Training." ACSM Information On, 2014.</li>
+ </ol>
+ </div>
+
+ <div class="guide-cta">
+ <h3>Size uygun antrenman programını bulun</h3>
+ <p>Kişisel sağlık profili oluşturarak hedeflerinize özel HIIT ve egzersiz önerileri alın.</p>
+ <a href="../test.html" class="cta-btn">Teste Başla →</a>
+ </div>
+ </main>
+
+ <footer class="footer">
+ <div class="footer-inner">
+ <div class="footer-grid">
+ <div class="footer-brand">
+ <a href="../../index.html"><img src="../../images/logo-white.svg" alt="UzunYaşa" class="footer-logo"></a>
+ <p>Türkiye'nin bağımsız, kanıta dayalı sağlıklı yaşam platformu.</p>
+ <p style="font-size:0.85rem;font-style:italic;opacity:0.6;margin-top:0.25rem;">Türkiye uzun yaşasın diye.</p>
+ </div>
+ <div class="footer-col">
+ <h4>Keşfet</h4>
+ <a href="../beslenme.html">Beslenme</a>
+ <a href="../egzersiz.html">Egzersiz</a>
+ <a href="../uyku-stres.html">Uyku & Stres</a>
+ <a href="../tedavi.html">Tedavi Seçenekleri</a>
+ </div>
+ <div class="footer-col">
+ <h4>Araçlar</h4>
+ <a href="../test.html">Bana Ne Uygun?</a>
+ <a href="../araclar.html#bmi">BMI Hesaplayıcı</a>
+ <a href="../araclar.html#kalori">Kalori Hesaplayıcı</a>
+ </div>
+ <div class="footer-col">
+ <h4>Hakkımızda</h4>
+ <a href="../hakkimizda.html">Ekibimiz</a>
+ <a href="../bilim.html">Bilimsel Yaklaşım</a>
+ <a href="../hakkimizda.html#iletisim">İletişim</a>
+ </div>
+ </div>
+ <div class="footer-bottom">
+ <span>© 2026 UzunYaşa. Tüm hakları saklıdır.</span>
+ <span>Gizlilik Politikası | Kullanım Koşulları</span>
+ </div>
+ </div>
+ </footer>
+ <script src="../../scripts/content-page.js" defer></script>
+</body>
+</html>
