--- a/pages/egzersiz/kardiyovaskular.html
+++ b/pages/egzersiz/kardiyovaskular.html
@@ -339,6 +339,32 @@
  <li>Yeterli su içiyorum</li>
  </ul>
 
+ <h2>Bu Konu Kilo Yönetimiyle Nasıl Bağlantılı?</h2>
+ <p>Kardiyovasküler egzersiz, kilo yönetiminin en temel bileşenlerinden biridir:</p>
+ <ul>
+ <li><strong>Doğrudan kalori yakımı:</strong> 30 dakikalık tempolu yürüyüş ~150-200 kcal, koşu ~300-400 kcal, bisiklet ~250-400 kcal yakar</li>
+ <li><strong>Metabolizma artışı:</strong> Düzenli kardio, bazal metabolizma hızını artırır — dinlenirken bile daha fazla kalori yakarsınız</li>
+ <li><strong>Yağ oksidasyonu:</strong> Orta yoğunluklu kardio, vücudun yağı enerji kaynağı olarak kullanma kapasitesini artırır</li>
+ <li><strong>İnsülin duyarlılığı:</strong> Kardio egzersizi, insülin direncini azaltarak yağ depolanmasını yavaşlatır</li>
+ <li><strong>İştah düzenlemesi:</strong> Düzenli egzersiz yapanlar, iştah hormonlarını daha iyi düzenler</li>
+ <li><strong>Viseral yağ azalması:</strong> Kardio, özellikle karın bölgesindeki tehlikeli iç organ yağını azaltır</li>
+ </ul>
+ <p><strong>Kilo vermek için önerilen:</strong> Haftada 200-300 dakika orta yoğunluklu kardio (ACSM önerisi). Bu, günde yaklaşık 30-45 dakikaya denk gelir. Beslenme düzenlemesiyle birlikte uygulandığında en etkili sonuçlar alınır.</p>
+
+ <h2>Sık Sorulan Sorular</h2>
+
+ <h3>Sabah mı akşam mı egzersiz yapmalıyım?</h3>
+ <p>En iyi zaman, düzenli yapabildiğiniz zamandır. Bilimsel olarak akşam 15:00-17:00 arası fiziksel performans en yüksektir. Ancak sabah egzersizi, günün geri kalanında enerji ve ruh halini artırır. Önemli olan tutarlılık.</p>
+
+ <h3>Aç karnına kardio daha mı çok yağ yakar?</h3>
+ <p>Aç karnına egzersiz sırasında yağ yakım oranı daha yüksek olabilir, ancak toplam günlük kalori dengesi önemlidir. Aç karnına performansınız düşüyorsa, hafif bir atıştırmalık (muz, birkaç badem) faydalıdır.</p>
+
+ <h3>Kalp hızı monitörü almam gerekiyor mu?</h3>
+ <p>Gerekli değildir ama faydalıdır. Konuşma testi (egzersiz sırasında konuşabiliyorsanız orta yoğunluk) başlangıç için yeterlidir. İlerleme kaydetmek istiyorsanız, temel bir akıllı saat veya göğüs bandı yatırıma değer.</p>
+
+ <h3>Diz ağrım var, koşu yapabilir miyim?</h3>
+ <p>Diz ağrısının nedenine bağlı. Önce bir ortopedist değerlendirmesi yapın. Birçok diz ağrısı koşuyu engellemez, ancak form düzeltmesi veya ayakkabı değişikliği gerekebilir. Alternatif: bisiklet veya yüzme düşük eklem stresli seçeneklerdir.</p>
+
  <div class="sources">
  <h4> Kaynaklar ve Referanslar</h4>
  <ol>
