--- a/pages/hikayeler.html
+++ b/pages/hikayeler.html
@@ -427,7 +427,7 @@
  <div class="label">Yöntem</div>
  </div>
  </div>
- <p class="story-quote">"İki çocuk doğurduktan sonra kendime bakamaz olmuştum. UzunYaşa ile adım adım ilerledim, şimdi çocuklarımla parkta koşabiliyorum."</p>
+ <p class="story-quote">"İki çocuk doğurduktan sonra 95 kiloya ulaşmıştım. Diz ağrılarından merdiven çıkamıyordum. Akdeniz diyetine geçiş ve günde 30 dakika yürüyüşle başladım. İlk 3 ayda 8 kilo verdim, motivasyonum arttı. 12 ayın sonunda 28 kilo vermiştim. Artık çocuklarımla parkta koşabiliyorum, diz ağrılarım tamamen geçti."</p>
  <span class="hub-coming-soon"> Yakında</span>
  </div>
  </div>
@@ -462,7 +462,7 @@
  <div class="label">Yöntem</div>
  </div>
  </div>
- <p class="story-quote">"50 yaşından sonra spor yapmak için çok geç sandım. Yanılmışım. Şimdi haftada 3 gün salon, 2 gün yürüyüş yapıyorum."</p>
+ <p class="story-quote">"52 yaşında, kolesterol yüksekliği ve başlangıç hipertansiyon teşhisi aldım. Doktorum 'ya ilaç ya da yaşam tarzı değişikliği' dedi. Hayatımda hiç spor yapmamıştım. Haftada 2 gün yürüyüşle başladım, 3 ay sonra salona yazıldım. 8 ayda 18 kilo verdim, kolesterolüm normal aralığa döndü, tansiyonum düzeldi. 50 yaşından sonra spor yapmak için çok geç olduğunu sanıyordum. Yanılmışım."</p>
  <span class="hub-coming-soon"> Yakında</span>
  </div>
  </div>
@@ -497,7 +497,7 @@
  <div class="label">İlaç</div>
  </div>
  </div>
- <p class="story-quote">"Diyabet ilaçlarından kurtulmak imkansız görünüyordu. Beslenme değişikliği ve düzenli hareketle 1 yılda başardım."</p>
+ <p class="story-quote">"Tip 2 diyabet teşhisi aldığımda HbA1c'm 8.2 idi, 2 farklı ilaç kullanıyordum. Endokrinologumun desteğiyle düşük glisemik indeksli beslenmeye geçtim, günlük 40 dakika tempolu yürüyüş programı uyguladım. 6. ayda bir ilaç kesildi, 12. ayda HbA1c'm 5.8'e düştü ve tüm ilaçlarım sonlandırıldı. 22 kilo kaybettim. Diyabetten kurtulmak imkansız değilmiş."</p>
  <span class="hub-coming-soon"> Yakında</span>
  </div>
  </div>
@@ -532,7 +532,7 @@
  <div class="label">Enerji arttı</div>
  </div>
  </div>
- <p class="story-quote">"Kronik yorgunluk ve stresle mücadele ediyordum. Uyku düzenim ve stres yönetimim değişince her şey değişti."</p>
+ <p class="story-quote">"Yoğun iş temposu nedeniyle günde 4-5 saat uyuyordum, kronik yorgunluk ve stresle mücadele ediyordum. Gece atıştırma alışkanlığım vardı ve farkında olmadan 12 kilo almıştım. Uyku hijyeni kurallarını uygulamaya başladım: ekranları yatmadan 1 saat önce bıraktım, sabit uyku saati belirledim, nefes egzersizleri öğrendim. 3 ay sonra 7-8 saat uyumaya başladım, stresim dramatik şekilde azaldı, gece atıştırma durdu ve 8 kilo verdim."</p>
  <span class="hub-coming-soon"> Yakında</span>
  </div>
  </div>
@@ -567,7 +567,7 @@
  <div class="label">Yöntem</div>
  </div>
  </div>
- <p class="story-quote">"Yıllarca diyet yaptım, hep geri aldım. İlaç tedavisi + davranışsal değişim kombinasyonu benim için çözüm oldu."</p>
+ <p class="story-quote">"20'li yaşlarımdan beri diyet yapıyordum ama her seferinde verdiğimi geri alıyordum. Yo-yo etkisi psikolojimi de bozmuştu. Endokrinologum GLP-1 agonisti önerdi, yanı sıra bir diyetisyen ve psikolog ile çalışmaya başladım. Davranışsal terapi sayesinde yeme dürtülerimi yönetmeyi, duygusal yemeyi kontrol etmeyi öğrendim. 14 ayda 35 kilo verdim. Bu kez geri almayacağımı biliyorum çünkü sorunun kökeni olan davranış kalıplarımı değiştirdim."</p>
  <span class="hub-coming-soon"> Yakında</span>
  </div>
  </div>
@@ -602,7 +602,7 @@
  <div class="label">Yöntem</div>
  </div>
  </div>
- <p class="story-quote">"BMI 48'di, hipertansiyon ve uyku apnem vardı. Ameliyattan 2 yıl sonra tüm hastalıklarım geride kaldı."</p>
+ <p class="story-quote">"170 kiloydum, BMI'm 48'di. Hipertansiyon, uyku apnesi ve başlangıç diyabetim vardı. CPAP cihazı olmadan uyuyamıyordum. Bariatrik cerrahi ekibim 6 aylık hazırlık programı uyguladı: psikolojik değerlendirme, beslenme eğitimi, egzersiz adaptasyonu. Sleeve gastrektomi sonrası ilk yıl 50 kilo, ikinci yıl 15 kilo daha verdim. Uyku apnem tamamen düzeldi, tansiyonum normal, diyabet yok. 2 yılda 65 kilo verdim ve hayatımı geri kazandım."</p>
  <span class="hub-coming-soon"> Yakında</span>
  </div>
  </div>
