--- a/pages/icerik-haritasi.html
+++ b/pages/icerik-haritasi.html
@@ -191,7 +191,7 @@
  <h1>İçerik Haritası</h1>
  <p>Platformumuzdaki tüm içeriklere tek bir sayfadan ulaşın.</p>
  <div class="ih-stats">
- <div class="ih-stat"> <strong id="totalPages">75+</strong> sayfa</div>
+ <div class="ih-stat"> <strong id="totalPages">80+</strong> sayfa</div>
  <div class="ih-stat"> <strong>8</strong> kategori</div>
  <div class="ih-stat"> <strong>200+</strong> bilimsel kaynak</div>
  </div>
@@ -209,7 +209,7 @@
  <div class="ih-cat-left">
  <div class="ih-cat-icon" style="background:#f0fdfa;"></div>
  <h3>Ana Sayfalar</h3>
- <span class="ih-cat-count">7</span>
+ <span class="ih-cat-count">10</span>
  </div>
  <span class="ih-cat-arrow"></span>
  </div>
@@ -222,6 +222,9 @@
  <a href="araclar.html" class="ih-link">Araçlar</a>
  <a href="hikayeler.html" class="ih-link">Başarı Hikayeleri</a>
  <a href="bilim.html" class="ih-link">Bilimsel Yaklaşım</a>
+ <a href="istatistikler.html" class="ih-link">Obezite İstatistikleri</a>
+ <a href="icerik-haritasi.html" class="ih-link">İçerik Haritası</a>
+ <a href="ecem-app.html" class="ih-link">Ecem AI Asistan</a>
  </div>
  </div>
  </div>
@@ -380,6 +383,7 @@
  <a href="blog/blue-zones-dunyanin-en-uzun-yasayan-insanlarinin-9-sirri.html" class="ih-link">Blue Zones: 9 Sır</a>
  <a href="blog/kilo-yonetimi-tedavi-secenekleri-karsilastirmasi.html" class="ih-link">Tedavi Seçenekleri Karşılaştırması</a>
  <a href="blog/bilimsel-yaklasimimiz-neden-onemli.html" class="ih-link">Bilimsel Yaklaşımımız</a>
+ <a href="blog/turkiye-obezite-rehberi.html" class="ih-link">Türkiye Obezite Rehberi</a>
  </div>
  </div>
  </div>
