--- a/pages/stres/is-yasam-dengesi.html
+++ b/pages/stres/is-yasam-dengesi.html
@@ -209,4 +209,216 @@
  <h3>2. Duygusal Enerji</h3>
  <ul>
  <li>Keyif aldığınız aktivitelere düzenli zaman ayırın</li>
- <li>Enerji veren insanlarla vakit geçirin, enerji çalan ilişkileri sını
+ <li>Enerji veren insanlarla vakit geçirin, enerji çalan ilişkileri sınırlandırın</li>
+ <li>Minnettarlık pratiği yapın — her akşam 3 güzel şey yazın</li>
+ <li>Duygularınızı bastırmayın, adlandırın: "Şu an öfkeliyim" demek bile rahatlatır</li>
+ </ul>
+
+ <h3>3. Zihinsel Enerji</h3>
+ <ul>
+ <li>En önemli işi günün en enerjik saatinde yapın</li>
+ <li>Görev değiştirme maliyetinden kaçının — tek iş odaklı bloklar oluşturun</li>
+ <li>90 dakikada bir mola verin (ultradian döngüsü)</li>
+ <li>Yeni şeyler öğrenin — zihinsel esnekliği artırır</li>
+ </ul>
+
+ <h3>4. Ruhsal/Amaç Enerjisi</h3>
+ <ul>
+ <li>İşinizin "neden"ini hatırlayın — anlam bulmak tükenmişliğe karşı koruyucudur</li>
+ <li>Değerlerinizle uyumlu yaşayın — iç çatışma enerji tüketir</li>
+ <li>Başkalarına yardım edin — gönüllülük yaşam memnuniyetini artırır</li>
+ <li>Doğayla vakit geçirin — haftada 120 dakika doğa teması stres hormonlarını düşürür</li>
+ </ul>
+
+ <h2>Tükenmişlik (Burnout) Önleme</h2>
+ <p>Tükenmişlik, iş-yaşam dengesizliğinin en ciddi sonucudur. WHO tarafından 2019'da resmi olarak tanınan bir mesleki olgudur. Üç bileşeni vardır:</p>
+ <ol>
+ <li><strong>Duygusal tükenme:</strong> "Bitmiş" hissi, enerji yok</li>
+ <li><strong>Duyarsızlaşma:</strong> İşe ve insanlara karşı kayıtsızlık</li>
+ <li><strong>Kişisel başarı hissinin azalması:</strong> "Hiçbir şeyi yeterince iyi yapamıyorum"</li>
+ </ol>
+
+ <h3>Erken Uyarı İşaretleri</h3>
+ <ul>
+ <li>Pazar akşamları yoğun kaygı hissetmek</li>
+ <li>İş dışı ilgi alanlarını tamamen kaybetmek</li>
+ <li>Sık hastalanmak (bağışıklık zayıflaması)</li>
+ <li>Uyku bozulması — ya uyuyamama ya da aşırı uyuma</li>
+ <li>Alkol, yemek veya ekran kullanımının artması</li>
+ <li>"Ne anlamı var?" sıklığının artması</li>
+ </ul>
+
+ <h3>Tükenmişlikten Çıkış Stratejisi</h3>
+ <ol>
+ <li><strong>Tanıyın ve kabul edin:</strong> "Tükenmişlik yaşıyorum" demek ilk ve en önemli adımdır</li>
+ <li><strong>Acil destek:</strong> Güvendiğiniz birine anlatın (partner, arkadaş, profesyonel)</li>
+ <li><strong>İzin kullanın:</strong> Mümkünse birkaç gün tatil. Tatilde gerçekten dinlenin — iş yapmayla doldurmayın</li>
+ <li><strong>Sınırları yeniden çizin:</strong> Bu kez sert ve net. Gerekirse yöneticinizle konuşun</li>
+ <li><strong>Profesyonel destek:</strong> Terapist veya koç ile çalışmak, yapısal değişiklikler yapmanıza yardımcı olur</li>
+ <li><strong>Fiziksel bakım:</strong> Uyku, beslenme ve egzersiz — üçü birden düzeltilmeli</li>
+ <li><strong>Uzun vadeli plan:</strong> İş değişikliği veya kariyer yönlendirmesi gerekebilir</li>
+ </ol>
+
+ <h2>Örnek Günlük Program: Dengeli Bir Gün</h2>
+
+ <div class="timeline">
+ <div class="time-slot">
+ <div class="time">06:30</div>
+ <div><strong>Uyanış:</strong> Telefona bakmadan 15 dakika. Bir bardak su, 5 dakika nefes egzersizi veya kısa meditasyon.</div>
+ </div>
+ <div class="time-slot">
+ <div class="time">07:00</div>
+ <div><strong>Sabah rutini:</strong> Kahvaltı, 10-15 dakika güneş ışığı (dışarıda kısa yürüyüş ideal), hazırlanma.</div>
+ </div>
+ <div class="time-slot">
+ <div class="time">08:30</div>
+ <div><strong>Derin çalışma bloğu 1:</strong> En önemli iş görevi. Telefon sessize, e-posta kapalı. 90 dakika kesintisiz.</div>
+ </div>
+ <div class="time-slot">
+ <div class="time">10:00</div>
+ <div><strong>Mola:</strong> 15 dakika yürüyüş, su, kısa sohbet. E-posta kontrolü.</div>
+ </div>
+ <div class="time-slot">
+ <div class="time">10:15</div>
+ <div><strong>Derin çalışma bloğu 2:</strong> İkinci önemli görev. 75 dakika.</div>
+ </div>
+ <div class="time-slot">
+ <div class="time">11:30</div>
+ <div><strong>Toplantılar / İletişim:</strong> E-posta yanıtları, toplantılar, iş arkadaşlarıyla koordinasyon.</div>
+ </div>
+ <div class="time-slot">
+ <div class="time">12:30</div>
+ <div><strong>Öğle molası:</strong> En az 30 dakika. Masadan kalkın. Mümkünse dışarıda yemek yiyin. İş konuşmayın.</div>
+ </div>
+ <div class="time-slot">
+ <div class="time">13:30</div>
+ <div><strong>Hafif iş bloğu:</strong> Rutin görevler, idari işler, toplantılar (doğal enerji çukuru dönemi).</div>
+ </div>
+ <div class="time-slot">
+ <div class="time">15:00</div>
+ <div><strong>Derin çalışma bloğu 3:</strong> Enerji yeniden yükselir. Yaratıcı iş veya problem çözme.</div>
+ </div>
+ <div class="time-slot">
+ <div class="time">17:00</div>
+ <div><strong>Günü kapatma ritüeli:</strong> Yarının planını yazın, masayı toplayın, "kapanış" sinyali.</div>
+ </div>
+ <div class="time-slot">
+ <div class="time">17:30</div>
+ <div><strong>Geçiş dönemi:</strong> İşten eve geçiş. Yürüyüş, podcast, müzik. İş modundan çıkış.</div>
+ </div>
+ <div class="time-slot">
+ <div class="time">18:00</div>
+ <div><strong>Egzersiz:</strong> 30-45 dakika hareket. Koşu, yoga, salon, yürüyüş — ne keyif veriyorsa.</div>
+ </div>
+ <div class="time-slot">
+ <div class="time">19:00</div>
+ <div><strong>Akşam yemeği:</strong> Aileyle veya arkadaşlarla. Telefonsuz sofra.</div>
+ </div>
+ <div class="time-slot">
+ <div class="time">20:00</div>
+ <div><strong>Kişisel zaman:</strong> Hobi, kitap, dizi, sohbet. Keyif veren ne varsa.</div>
+ </div>
+ <div class="time-slot">
+ <div class="time">21:30</div>
+ <div><strong>Uyku rutini:</strong> Ekranları kıs, ışıkları azalt, germe veya meditasyon.</div>
+ </div>
+ <div class="time-slot">
+ <div class="time">22:30</div>
+ <div><strong>Uyku:</strong> 7-8 saat hedefi.</div>
+ </div>
+ </div>
+
+ <h2>Bu Konu Kilo Yönetimiyle Nasıl Bağlantılı?</h2>
+ <p>İş-yaşam dengesizliği, kilo yönetimini birçok yoldan olumsuz etkiler:</p>
+ <ul>
+ <li><strong>Stres yemesi:</strong> Uzun çalışma saatleri ve kronik stres, yüksek kalorili "konfor yiyeceklerine" yönelmeyi artırır. Kortizol, özellikle şekerli ve yağlı gıdalara olan isteği tetikler</li>
+ <li><strong>Hareketsizlik:</strong> Aşırı çalışma, egzersiz için zaman bırakmaz. Masabaşı çalışma, günlük kalori harcamasını dramatik şekilde düşürür</li>
+ <li><strong>Uyku bozulması:</strong> İş stresi uyku kalitesini düşürür; yetersiz uyku iştah hormonlarını (ghrelin ve leptin) bozarak aşırı yemeye yol açar</li>
+ <li><strong>Düzensiz öğünler:</strong> Yoğun iş temposunda öğün atlama veya geç saatte aşırı yeme, metabolizmayı olumsuz etkiler</li>
+ <li><strong>Alkol kullanımı:</strong> İş stresiyle başa çıkmak için alkole yönelme, kalori alımını artırır ve yağ yakımını yavaşlatır</li>
+ </ul>
+ <p>İş-yaşam dengesini iyileştirmek, dolaylı ama güçlü bir kilo yönetimi stratejisidir. Stres düştüğünde, uyku düzeldiğinde ve egzersiz için zaman bulunduğunda, kilo yönetimi doğal olarak kolaylaşır.</p>
+
+ <h2>Pratik İpuçları</h2>
+ <ul>
+ <li><strong>Sabah ilk iş telefonunuza bakmayın:</strong> İlk 30-60 dakika kendinize ayırın. Bu, günün tonunu belirler</li>
+ <li><strong>"Kapanış ritüeli" oluşturun:</strong> İş günü bittiğinde somut bir eylem yapın (bilgisayarı kapatma, yarının listesini yazma). Bu, beyninize "iş bitti" sinyali gönderir</li>
+ <li><strong>Haftalık "kutsal zaman" belirleyin:</strong> Haftada en az 2-3 saat tamamen kendinize ait, pazarlık edilemez zaman</li>
+ <li><strong>Yılda en az 2 hafta kesintisiz tatil yapın:</strong> Araştırmalar, tatil yapmayan çalışanların kalp krizi riskinin %30 daha yüksek olduğunu gösteriyor</li>
+ <li><strong>Mükemmeliyetçiliği bırakın:</strong> "Yeterince iyi" çoğu zaman "mükemmel"den daha sürdürülebilirdir</li>
+ <li><strong>Yardım isteyin:</strong> Hem işte hem evde görev dağılımı yapın. Her şeyi tek başınıza yapmak zorunda değilsiniz</li>
+ <li><strong>Doğaya çıkın:</strong> Haftada en az 120 dakika doğada vakit geçirmek, stres hormonlarını düşürür ve yaşam memnuniyetini artırır</li>
+ </ul>
+
+ <h2>Sık Sorulan Sorular</h2>
+
+ <h3>İş yerimde sınır koymak imkansız, ne yapabilirim?</h3>
+ <p>Sınır koymak bir gecede olmaz ve bazen kurumsal kültürle çatışabilir. Küçük başlayın: bir gün mesai sonrası e-postayı kapatmayı deneyin. Sonuçların olumsuz olmadığını görünce cesaret artar. Eğer iş yeriniz gerçekten sağlığınızı tehdit ediyorsa, uzun vadede iş değişikliği düşünmek de bir seçenektir.</p>
+
+ <h3>Evden çalışırken iş-yaşam sınırı nasıl çizilir?</h3>
+ <p>Fiziksel alan ayırın (mümkünse ayrı oda), sabit çalışma saatleri belirleyin, iş bitince bilgisayarı kapatın, "eve gelme" ritüeli oluşturun (kısa yürüyüş, kıyafet değiştirme). İş alanınıza yatak odanızdan giriş olmamalı.</p>
+
+ <h3>Tükenmişlik mi yaşıyorum yoksa sadece yorgun muyum?</h3>
+ <p>Yorgunluk dinlenmeyle geçer; tükenmişlik geçmez. Tatil sonrası bile enerjiniz gelmiyorsa, işe karşı sinik hissediyorsanız ve kişisel başarı hissiniz azaldıysa, tükenmişlik olabilir. Bir profesyonelden değerlendirme almanızı öneririz.</p>
+
+ <h3>Patron mesai sonrası mesaj atıyor, ne yapmalıyım?</h3>
+ <p>Türkiye'de çok yaygın bir sorun. Seçenekler: (1) Mesajı görün ama "yarın sabah ilk iş bakarım" yazın, (2) iş telefonunu kişisel telefondan ayırın ve kapatın, (3) yöneticinizle açıkça konuşun — "acil olmayan konularda mesai saatlerinde dönüş yapıyorum" deyin. Unutmayın: sınır koymak bencillik değil, sürdürülebilirlik.</p>
+
+ <div class="guide-cta">
+ <h3>Stres ve yaşam kalitesi profilinizi keşfedin</h3>
+ <p>Kişisel değerlendirmenizle iş-yaşam dengenizi ölçün ve öneriler alın.</p>
+ <a href="../test.html" class="cta-btn">Teste Başla →</a>
+ </div>
+
+ <div class="references">
+ <h3> Kaynaklar</h3>
+ <ol>
+ <li>OECD (2024). Better Life Index: Work-Life Balance. oecd.org.</li>
+ <li>Gallup (2024). State of the Global Workplace Report.</li>
+ <li>WHO/ILO (2021). Long working hours increasing deaths from heart disease and stroke. WHO Joint Estimate.</li>
+ <li>Newport, C. (2016). Deep Work: Rules for Focused Success in a Distracted World. Grand Central Publishing.</li>
+ <li>Schwartz, T., Gomes, J., & McCarthy, C. (2010). The Way We're Working Isn't Working. Free Press.</li>
+ <li>Mark, G., Gudith, D., & Klocke, U. (2008). The Cost of Interrupted Work. Proceedings of CHI 2008.</li>
+ <li>White, M. P. et al. (2019). Spending at least 120 minutes a week in nature. Scientific Reports, 9, 7730.</li>
+ <li>Maslach, C., & Leiter, M. P. (2016). Understanding the burnout experience. World Psychiatry, 15(2), 103-111.</li>
+ </ol>
+ </div>
+ </main>
+
+ <footer class="footer">
+ <div class="footer-inner">
+ <div class="footer-grid">
+ <div class="footer-brand">
+ <a href="../../index.html"><img src="../../images/logo-white.svg" alt="UzunYaşa" class="footer-logo"></a>
+ <p>Türkiye'nin bağımsız, kanıta dayalı sağlıklı yaşam platformu.</p>
+ <p style="font-size:0.85rem;font-style:italic;opacity:0.6;margin-top:0.25rem;">Türkiye uzun yaşasın diye.</p>
+ </div>
+ <div class="footer-col">
+ <h4>Keşfet</h4>
+ <a href="../beslenme.html">Beslenme</a>
+ <a href="../egzersiz.html">Egzersiz</a>
+ <a href="../uyku-stres.html">Uyku & Stres</a>
+ <a href="../tedavi.html">Tedavi Seçenekleri</a>
+ </div>
+ <div class="footer-col">
+ <h4>Araçlar</h4>
+ <a href="../test.html">Bana Ne Uygun?</a>
+ <a href="../araclar.html#bmi">BMI Hesaplayıcı</a>
+ <a href="../araclar.html#kalori">Kalori Hesaplayıcı</a>
+ </div>
+ <div class="footer-col">
+ <h4>Hakkımızda</h4>
+ <a href="../hakkimizda.html">Ekibimiz</a>
+ <a href="../bilim.html">Bilimsel Yaklaşım</a>
+ <a href="../hakkimizda.html#iletisim">İletişim</a>
+ </div>
+ </div>
+ <div class="footer-bottom">
+ <span>© 2026 UzunYaşa. Tüm hakları saklıdır.</span>
+ <span>Gizlilik Politikası | Kullanım Koşulları</span>
+ </div>
+ </div>
+ </footer>
+ <script src="../../scripts/content-page.js" defer></script>
+</body>
+</html>
